Improved performance by removing unnecessary method calls.